[tool.poetry]
name = "railway-fastapi-template"
version = "0.1.0"
description = "This example starts up a FastAPI server"
authors = ["DeviousLab <deviouslab@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116"
uvicorn = "^0.30"
openai = "^0.27.4"
python-decouple = "^3.8"
python-dotenv = "^1.0.0"
pydantic = "^2"
pydantic-settings = "^2"
discord-py = "^2.2.2"
asyncio = "^3.4.3"
rich = "^13.3.4"
requests = "^2.29.0"
beautifulsoup4 = "^4.12.2"
requests-oauthlib = "^1.3.1"
tweepy = "^4.14.0"
helicone = "^1.0.14"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.116.0"
google-auth-oauthlib = "^1.2.0"
langchain-google-genai = "^2.1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
